fis2demo/envoy/src/main/resources/envoy.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:9998",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "access_log": [
             {
                "path": "/tmp/access.log"
             }
            ],
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "envoy",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "path": "/api/users",
                      "cluster": "mycluster"
                    },
                    {
                      "timeout_ms": 0,
                      "path": "/api/accounts",
                      "cluster": "mycluster"
                    },
                    {
                      "timeout_ms": 0,
                      "path": "/api/cards",
                      "cluster": "mycluster"
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/dev/null",
    "address": "tcp://127.0.0.1:8001"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "mycluster",
        "connect_timeout_ms": 1000,
        "type": "static",
        "service_name": "myservice",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://192.168.1.11:9999"
          }
        ]
      }
    ]
  }
}
